--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-fileupload": "^1.1.7-alpha.4",
     "express-mongo-sanitize": "^2.0.0",
     "helmet": "^3.23.3",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
